@@ -1,31 +1,25 @@
 package com.xpdustry.imperium.common.factory;
 
 import com.google.inject.*;
-import com.google.inject.Binder;
-import com.google.inject.Module;
-import com.google.inject.binder.LinkedBindingBuilder;
 import com.google.inject.matcher.Matchers;
 import com.google.inject.name.Names;
 import com.google.inject.spi.ProvisionListener;
 import jakarta.inject.Provider;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
+import java.util.concurrent.CopyOnWriteArrayList;
 import org.jspecify.annotations.Nullable;
 
-final class GuiceObjectFactory implements ObjectFactory {
+final class GuiceObjectFactory implements ObjectFactory, ProvisionListener {
 
     private final Injector injector;
-    private final List<Object> objects;
+    private final List<Object> provisioned = new CopyOnWriteArrayList<>();
+
+    @SuppressWarnings("UnusedAssignment")
+    private boolean initialized = false;
 
     public GuiceObjectFactory(final ObjectModule... modules) {
-        final var collector = new ResolvedObjectCollector();
-        try {
-            this.injector = Guice.createInjector(Stage.PRODUCTION, new ModuleProxy(Arrays.asList(modules), collector));
-            this.objects = List.copyOf(collector.resolved);
-        } finally {
-            collector.close();
-        }
+        this.injector = Guice.createInjector(Stage.PRODUCTION, new InternalObjectFactoryModule(List.of(modules)));
+        this.initialized = true;
     }
 
     @Override
@@ -34,88 +28,115 @@ final class GuiceObjectFactory implements ObjectFactory {
     }
 
     @Override
-    public List<Object> objects() {
-        return this.objects;
+    public <T> List<T> collect(final Class<T> type) {
+        if (!this.initialized) {
+            throw new IllegalStateException("You cannot collect objects while initializing");
+        }
+        return this.provisioned.stream()
+                .filter(type::isInstance)
+                .map(type::cast)
+                .toList();
     }
 
-    private static final class ResolvedObjectCollector implements ProvisionListener {
-
-        private final List<Object> resolved = new ArrayList<>();
-        private boolean closed = false;
-
-        @Override
-        public <T> void onProvision(final ProvisionInvocation<T> provision) {
-            if (!this.closed) {
-                this.resolved.add(provision.provision());
-            }
-        }
-
-        public void close() {
-            this.closed = true;
-            this.resolved.clear();
+    @Override
+    public <T> void onProvision(final ProvisionInvocation<T> provision) {
+        if (!this.initialized) {
+            this.provisioned.add(provision.provision());
         }
     }
 
-    private record ModuleProxy(List<ObjectModule> modules, ProvisionListener listener) implements Module {
+    private final class InternalObjectFactoryModule extends AbstractModule {
+
+        private final List<ObjectModule> modules;
+
+        private InternalObjectFactoryModule(final List<ObjectModule> modules) {
+            this.modules = modules;
+        }
 
         @Override
-        public void configure(final Binder binder) {
-            binder.disableCircularProxies();
-            binder.bindListener(Matchers.any(), this.listener);
-            final var guice = new GuiceObjectBinder(binder);
+        protected void configure() {
+            this.binder().skipSources(InternalObjectFactoryModule.class, ObjectModuleAdapter.class);
+            this.binder().bindListener(Matchers.any(), GuiceObjectFactory.this);
+            this.binder().disableCircularProxies();
+            this.binder().bind(ObjectFactory.class).toInstance(GuiceObjectFactory.this);
             for (final var module : this.modules) {
-                module.configure(guice);
+                this.install(new ObjectModuleAdapter(module));
             }
         }
     }
 
-    private record GuiceObjectBinder(Binder binder) implements ObjectBinder {
+    private static final class ObjectModuleAdapter extends PrivateModule {
+
+        private final ObjectModule module;
+
+        private ObjectModuleAdapter(final ObjectModule module) {
+            this.module = module;
+        }
+
+        @Override
+        protected void configure() {
+            this.module.configure(new GuiceObjectBinder(this.binder()));
+        }
+    }
+
+    private record GuiceObjectBinder(PrivateBinder binder) implements ObjectBinder {
 
         @Override
         public <T> BindingBuilder<T> bind(final Class<T> type) {
-            return new GuiceBindingBuilder<>(this.binder, type);
+            return new GuiceBindingBuilder<>(type);
         }
 
-        private static final class GuiceBindingBuilder<T> implements ObjectBinder.BindingBuilder<T> {
+        private final class GuiceBindingBuilder<T> implements BindingBuilder<T> {
 
-            private final Binder binder;
-            private final Class<T> type;
-            private @Nullable String name;
+            private boolean visible = true;
+            private Key<T> key;
 
-            private GuiceBindingBuilder(final Binder binder, final Class<T> type) {
-                this.binder = binder;
-                this.type = type;
+            private GuiceBindingBuilder(final Class<T> type) {
+                this.key = Key.get(type);
+            }
+
+            @Override
+            public BindingBuilder<T> named(final @Nullable String name) {
+                this.key = name == null ? key.withoutAttributes() : key.withAnnotation(Names.named(name));
+                return this;
+            }
+
+            @Override
+            public BindingBuilder<T> visible(final boolean visible) {
+                this.visible = visible;
+                return this;
             }
 
             @Override
             public void toImpl(final Class<? extends T> type) {
-                this.builder().to(type).asEagerSingleton();
+                GuiceObjectBinder.this.binder.bind(this.key).to(type).asEagerSingleton();
+                if (this.visible) {
+                    GuiceObjectBinder.this.binder.expose(this.key);
+                }
             }
 
             @Override
             public void toInst(final T instance) {
-                this.builder().toInstance(instance);
+                GuiceObjectBinder.this.binder.bind(this.key).toInstance(instance);
+                if (this.visible) {
+                    GuiceObjectBinder.this.binder.expose(this.key);
+                }
             }
 
             @Override
-            public void toProv(final Class<? extends Provider<? extends T>> type) {
-                this.builder().toProvider(type).asEagerSingleton();
+            public void toProv(final Class<? extends Provider<? extends T>> prov) {
+                GuiceObjectBinder.this.binder.bind(this.key).toProvider(prov).asEagerSingleton();
+                if (this.visible) {
+                    GuiceObjectBinder.this.binder.expose(this.key);
+                }
             }
 
             @Override
-            public void toProv(final Provider<? extends T> provider) {
-                this.builder().toProvider(provider).asEagerSingleton();
-            }
-
-            @Override
-            public ObjectBinder.BindingBuilder<T> named(final String name) {
-                this.name = name;
-                return this;
-            }
-
-            private LinkedBindingBuilder<T> builder() {
-                final var builder = this.binder.bind(this.type);
-                return this.name == null ? builder : builder.annotatedWith(Names.named(this.name));
+            public void toProv(final Provider<? extends T> prov) {
+                GuiceObjectBinder.this.binder.bind(this.key).toProvider(prov).asEagerSingleton();
+                if (this.visible) {
+                    GuiceObjectBinder.this.binder.expose(this.key);
+                }
             }
         }
     }
